# autocode

./: .gitignore  Caddyfile
backend/: pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py
backend/app/api/: agents.py  auth.py  deps.py  learning.py  projects.py  research.py  settings.py  social.py  users.py  ws.py
backend/app/models/: __init__.py  agent.py  common.py  learning.py  project.py  research.py  social.py  user.py
backend/app/services/: agent_templates.py  coding_agent.py  learning_agent.py  openai_client.py  research_runner.py  social_media.py  tmux.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_learning.py  test_projects.py  test_research.py  test_research_runner.py  test_settings.py  test_social.py  test_tmux.py  test_users.py
deploy/: autocode.service  install.sh
docs/plans/: 2026-02-16-autonomous-ai-dev-research.md  2026-02-17-autocode-design.md  2026-02-17-autocode-implementation.md  2026-02-17-meta-api-research.md  2026-02-17-research-agent-implementation.md  2026-02-17-research-agent-redesign.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: agents.ts  client.ts  learning.ts  projects.ts  research.ts  settings.ts  social.ts  users.ts
frontend/src/components/: AgentCard.tsx  ChatInterface.tsx  FileExplorer.tsx  ImplementationPlan.tsx  Layout.tsx  MarkdownCanvas.tsx  ProtectedRoute.tsx  Sidebar.tsx  Terminal.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminPanel.tsx  AgentBuilder.tsx  AgentDetail.tsx  Login.tsx  (+7 more)
(+3 files in other folders)
